--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
             <h2 class="HopeBridge">HopeBridge</h2>
             <nav class="nav-menu">
                 <a href="#">About</a>
-                <button class="btnLogin">Login</button>
+                <button class="btnLogin" id="openLoginModal">Login</button>
                 <button class="btnSignUp">Sign Up</button>
             </nav>
         </header>
