--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
             <h2 class="HopeBridge">HopeBridge</h2>
             <nav class="nav-menu">
                 <a href="#">About</a>
-                <button class="btnLogin" id="openLoginModal">Login</button>
-                <button class="btnSignUp">Sign Up</button>
+                <button class="btnLogin" id="openLoginModal" onclick="window.location.href='login.html'">Login</button>
+                <button class="btnSignUp" onclick="window.location.href='signup.html'">Sign Up</button>
             </nav>
         </header>
         <script src="main.js"></script>
