--- a/home.html
+++ b/home.html
@@ -8,9 +8,13 @@
     </head>
     <body>
         <header>
-            <h2 class="HopeBridge">HopeBridge</h2>
+            <div class="logo-container">
+            <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
+            <a href="home.html" class="HopeBridge">HopeBridge</a>
+        </div>
             <nav class="nav-menu">
                 <a href="#">About</a>
+                <span class="separator"></span>
                 <button class="btnLogin" id="openLoginModal" onclick="window.location.href='login.html'">Login</button>
                 <button class="btnSignUp" onclick="window.location.href='signup.html'">Sign Up</button>
             </nav>
