--- a/login.html
+++ b/login.html
@@ -7,16 +7,21 @@
     <body>
         <div class="login-container">        
         <form action="login" method="GET">
-            <h3>Welcome to HopeBridge</h3>
-            <label for="username">Username</label>
+            <div class="logo-container">
+                <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
+                <label>Welcome to </label>
+                <a href="home.html" class="HopeBridge">HopeBridge</a>
+            </div>
             <input type="text" id="username" name="username" placeholder="Username">
-
-            <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Password" required>
 
             <input type="submit" value="Login">
-            <center><a href="signup.html">Don't have an account?</a></center>
-        </form>
+            <a href="signup.html" class="forgot-password">Forgot password?</a>
         </div>
+            <div class="signup-container">
+                <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+            </div>
+        </form>
+ 
     </body>
 </html>
