--- a/accountret.html
+++ b/accountret.html
@@ -11,16 +11,13 @@
                 <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
                 <label>Welcome to </label>
                 <a href="home.html" class="HopeBridge">HopeBridge</a>
+                <h1 class="ar">Account Retrieve</h1>
+                <p class="fgp">Your password has been sent to your Email please go back to Login page</p>
             </div>
-            <input type="text" id="username" name="username" placeholder="Username">
-            <input type="password" id="password" name="password" placeholder="Password" required>
-
-            <input type="submit" value="Login">
-            <a href="forgotpass.html" class="forgot-password">Forgot password?</a>
+            <input type="submit" value="Confirm">
         </div>
-            <div class="signup-container">
-                <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-            </div>
+                
+
         </form>
  
     </body>
