--- a/signup.html
+++ b/signup.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HopeBridge login</title>
+        <title>HopeBridge signup</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="login-container">        
-        <form action="login" method="GET">
-            <h3>Welcome to HopeBridge</h3>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="Username">
+        <form action="signup" method="GET">
+            <div class="logo-container">
+                <label>Welcome to </label>
+                <a href="home.html" class="HopeBridge">HopeBridge</a>
+            </div>
+            <input type="text" id="username" name="username" placeholder="Create Username" required>
+            <input type="password" id="password1" name="password1" placeholder="Create Password" required>
+            <input type="password" id="password2" name="password2" placeholder="Confirm Password" required>
+            <input type="text" id="email" name="email" placeholder="Email Address" required>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-
-            <input type="button" value="Sign Up" onclick="window.location.href='register.html'">
-            <center><a href="login.html">Already have an account?</a></center>
-        </form>
+            <input type="submit" value="Login">
         </div>
+            <div class="signup-container">
+                <p>Already have an account? <a href="login.html">Login.</a></p>
+            </div>
+        </form>
+ 
     </body>
 </html>
