--- a/verify.html
+++ b/verify.html
@@ -11,16 +11,14 @@
                 <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
                 <label>Welcome to </label>
                 <a href="home.html" class="HopeBridge">HopeBridge</a>
+                <h1 class="ar">Enter the code</h1>
+                <p class="fgp">An email with verification code was just sent to Example@gmail.com</p>
             </div>
-            <input type="text" id="username" name="username" placeholder="Username">
-            <input type="password" id="password" name="password" placeholder="Password" required>
-
-            <input type="submit" value="Login">
-            <a href="forgotpass.html" class="forgot-password">Forgot password?</a>
+            <input type="text" id="verify" name="verify" placeholder="Code">
+            <input type="submit" value="Next">
         </div>
-            <div class="signup-container">
-                <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-            </div>
+                
+
         </form>
  
     </body>
