--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <input type="password" id="password" name="password" placeholder="Password" required>
 
             <input type="submit" value="Login">
-            <a href="forgotpass.html" class="forgot-password">Forgot password?</a>
+            <a href="signup.html" class="forgot-password">Forgot password?</a>
         </div>
             <div class="signup-container">
                 <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
