--- a/forgotpass.html
+++ b/forgotpass.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="login-container">        
-        <form action="login" method="GET">
+        <form action="emailsend.php" method="POST">
             <div class="logo-container">
                 <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
                 <label>Welcome to </label>
