--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('loginModal')">&times;</span>
             <h2>Sign In</h2>
-            <form>
+            <form action="login.php" method="post">
                 <input type="text" placeholder="Username" required>
                 <input type="password" placeholder="Password" required>
                 <button type="submit">Login</button>
@@ -37,7 +37,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('signupModal')">&times;</span>
             <h2>Sign Up</h2>
-            <form>
+            <form action="signup.php" method="post">
                 <input type="text" placeholder="Full Name" required>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
