--- a/home.html
+++ b/home.html
@@ -24,21 +24,18 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('loginModal')">&times;</span>
-            <h2>Sign In</h2>
-<<<<<<< HEAD
+            <h2>Login In</h2>
+
             <form action="login.php" method="post">
-                <input type="text" placeholder="Username" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-=======
-            <form>
-                <input type="text" name="Signin-Username" placeholder="Username" required>
-                <input type="password" name="Signin-Password" placeholder="Password" required>
+                <input type="text" name="username1" placeholder="Username" required>
+                <input type="password" name="password1" placeholder="Password" required>
+                <p>Confirm credentials</p>
+                <input type="text" name="username2" placeholder="Username" required>
+                <input type="password" name="password2" placeholder="Password" required>
                 <button type="submit" name="modal-btn">Login</button>
->>>>>>> 8590cdeddadd908c09f60e7cf85585570f764f81
+                <a href="forgotpass.html" class="forgot-password">Forgot Password?</a>
+            <p>Don't have an account? <br> <a href="#" onclick="switchModal('loginModal', 'signupModal')">Sign up</a></p>
             </form>
-            <a href="#" class="forgot-password">Forgot Password?</a>
-            <p>Don't have an account? <a href="#" onclick="switchModal('loginModal', 'signupModal')">Sign up</a></p>
         </div>
     </div>
     
@@ -47,21 +44,19 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('signupModal')">&times;</span>
             <h2>Sign Up</h2>
-<<<<<<< HEAD
+
             <form action="signup.php" method="post">
-                <input type="text" placeholder="Full Name" required>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Sign Up</button>
-=======
-            <form>
-                <input type="text" name="Full name" placeholder="Full Name" required>
-                <input type="email" name="Email" placeholder="Email" required>
-                <input type="password" name="Password" placeholder="Password" required>
+                <input type="text" name="username1" placeholder="Full Name" required>
+                <input type="email" name="email1" placeholder="Email" required>
+                <input type="password" name="password1" placeholder="Password" required>
+                <p>Confirm credentials</p>
+                <input type="text" name="username2" placeholder="Full Name" required>
+                <input type="email" name="email2" placeholder="Email" required>
+                <input type="password" name="password2" placeholder="Password" required>
                 <button type="submit" class="modal-btn">Sign Up</button>
->>>>>>> 8590cdeddadd908c09f60e7cf85585570f764f81
+
+                <p>Already have an account? <br> <a href="#" onclick="switchModal('signupModal', 'loginModal')">Sign in</a></p>
             </form>
-            <p>Already have an account? <a href="#" onclick="switchModal('signupModal', 'loginModal')">Sign in</a></p>
         </div>
     </div>
     
