homepage but not yet done
edraline

--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <div class="description-container">
             <h1>Use us as a bridge<br>to help people in<br>times of need.</h1>
             <p>Join us in making a difference by volunteering, donating, or supporting those in need. Together, we can create hope for a better future.</p>
-            <button class="btnLearnMore">Learn More</button>
+            <a href="homepage.html" class="btnLearnMore">Learn More</a>
         </div>
         <div class="image-container">
             <img src="volunteer.jpeg" alt="Volunteers helping people">
