--- a/homepage.html
+++ b/homepage.html
@@ -6,15 +6,25 @@
     <title>Hope Bridge</title>
     <link rel="stylesheet" href="styleshomepage.css">
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="name-container">
+        <!-- Sidebar -->
         <aside class="sidebar">
             <h2 class="HopeBridge">HopeBridge</h2>
             <nav>
                 <ul>
-                    <li><a href="homepage.html"><ion-icon class="ion-icon" name="home-outline"></ion-icon> Home</a></li>
-                    <li><a href="search.html"><ion-icon name="search-outline"></ion-icon> Search</a></li>
+                    <li>
+                        <a href="#" onclick="toggleSearch()">
+                            <ion-icon name="search-outline"></ion-icon> Search
+                        </a>
+                    </li>
+                    <!-- Search Bar (Hidden by Default) -->
+                    <li id="search-container" class="hidden">
+                        <input type="text" id="searchBox" class="search-box" placeholder="Type to search...">
+                    </li>
+                    <li><a href="homepage.html"><ion-icon name="home-outline"></ion-icon> Home</a></li>
                     <li><a href="notifications.html"><ion-icon name="notifications-outline"></ion-icon> Notifications</a></li>
                     <li><a href="news.html"><ion-icon name="newspaper-outline"></ion-icon> News</a></li>
                     <li><a href="account.html"><ion-icon name="person-outline"></ion-icon> Account</a></li>
@@ -23,21 +33,26 @@
                 </ul>                
             </nav>
         </aside>
+
+        <!-- Main Content -->
         <main class="content">
+            <!-- News Card 1 -->
             <div class="news-card">
-                <img src="poverty.jpeg" alt="Disaster Image">
+                <img src="poverty.jpeg" alt="Tornado Damage">
                 <div class="news-info">
                     <h3>📍 Lucao, Dagupan City</h3>
                     <p>A tornado caused widespread damage, leaving thousands of families without access to safe water and sanitation facilities...</p>
-                    <button type="button" name="btnmore" onclick="window.location.href='More.html'" >More Details</button>
+                    <button type="button" onclick="window.location.href='More.html'">More Details</button>
                 </div>
             </div>
+
+            <!-- News Card 2 -->
             <div class="news-card">
                 <img src="volunteer.jpeg" alt="Fire Incident">
                 <div class="news-info">
                     <h3>📍 Mangin, Dagupan City</h3>
                     <p>Another fire at a vacant home in Barangay Mangin has led to a demolition order. PANDA Volunteer Fire...</p>
-                    <button >More Details</button>
+                    <button type="button" onclick="window.location.href='More.html'">More Details</button>
                 </div>
             </div>
         </main>
