--- a/home.html
+++ b/home.html
@@ -26,15 +26,15 @@
             <h2>Login In</h2>
     
             <form action="login.php" method="post">
-                <input type="text" name="username1" placeholder="Username (8 to 16 characters)" required>
+                <input type="text" name="username1" placeholder="Username" minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$"  required title="Up to (8 to 16 characters). NO special characters">
                 <div class="password-container">
-                    <input type="password" name="password1" id="password1" placeholder="Password" required>
+                    <input type="password" name="password1" id="password1" placeholder="Password" minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
                     <img src="hide.png" alt="hide" id="hide-icon" onclick="togglePassword('password1', this)">
                 </div>
                 <p>Confirm credentials</p>
-                <input type="text" name="username2" placeholder="Username" required>
+                <input type="text" name="username2" placeholder="Username" minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
                 <div class="password-container">
-                    <input type="password" name="password2" id="password2" placeholder="Password" required>
+                    <input type="password" name="password2" id="password2" placeholder="Password" minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
                     <img src="hide.png" alt="hide" id="hide-icon" onclick="togglePassword('password1', this)">
                 </div>
                 <button type="submit" name="modal-btn">Login</button>
@@ -53,17 +53,17 @@
         <h2>Sign Up</h2>
 
         <form action="signup.php" method="post">
-            <input type="text" name="username1" placeholder="Full Name" required>
+            <input type="text" name="username1" placeholder="Full Name"  minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
             <input type="email" name="email1" placeholder="Email" required>
             <div class="password-container">
-                <input type="password" name="password1" id="password1" placeholder="Password" required>
+                <input type="password" name="password1" id="password1" placeholder="Password"  minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
                 <img src="hide.png" alt="hide" id="hide-icon" onclick="togglePassword('password1', this)">
             </div>
             <p>Confirm credentials</p>
-            <input type="text" name="username2" placeholder="Full Name" required>
+            <input type="text" name="username2" placeholder="Full Name"  minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
             <input type="email" name="email2" placeholder="Email" required>
             <div class="password-container">
-                <input type="password" name="password2" id="password2" placeholder="Password" required>
+                <input type="password" name="password2" id="password2" placeholder="Password"  minlength="8" maxlength="16"  pattern="^[a-zA-Z0-9]{8,16}$" required title="Up to (8 to 16 characters). NO special characters">
                 <img src="hide.png" alt="hide" id="hide-icon" onclick="togglePassword('password1', this)">
             </div>
             <button type="submit" class="modal-btn">Sign Up</button>
