--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hope Bridge</title>
-    <link rel="stylesheet" href="styleshomepage.css">
-    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="styleshomepage.css"> <!-- Your separate CSS file -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <div class="name-container">
@@ -20,10 +20,6 @@
                             <ion-icon name="search-outline"></ion-icon> Search
                         </a>
                     </li>
-                    <!-- Search Bar (Hidden by Default) -->
-                    <li id="search-container" class="hidden">
-                        <input type="text" id="searchBox" class="search-box" placeholder="Type to search...">
-                    </li>
                     <li><a href="homepage.html"><ion-icon name="home-outline"></ion-icon> Home</a></li>
                     <li><a href="notifications.html"><ion-icon name="notifications-outline"></ion-icon> Notifications</a></li>
                     <li><a href="news.html"><ion-icon name="newspaper-outline"></ion-icon> News</a></li>
@@ -36,6 +32,11 @@
 
         <!-- Main Content -->
         <main class="content">
+            <!-- Search Bar (Hidden by Default) -->
+            <div id="search-container" class="hidden">
+                <input type="text" id="searchBox" class="search-box" placeholder="Type to search..." onkeypress="return isAlphanumeric(event)">
+            </div>
+
             <!-- News Card 1 -->
             <div class="news-card">
                 <img src="poverty.jpeg" alt="Tornado Damage">
@@ -57,5 +58,8 @@
             </div>
         </main>
     </div>
+
+    <!-- Reference to your JavaScript file -->
+    <script src="main.js"></script> <!-- Ensure this path is correct -->
 </body>
 </html>
