--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hope Bridge</title>
-    <link rel="stylesheet" href="moredetails.css"> <!-- Ensure the CSS file is correctly linked -->
+    <link rel="stylesheet" href="about.css"> <!-- Ensure the CSS file is correctly linked -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
@@ -28,8 +28,8 @@
             <nav class="nav-menu">
                 <a href="homepage.html">Home</a>
                 <a href="notification.html">Notification</a>
-                <a href="#">News</a>
-                <a href="#">About</a>
+                <a href="news.html">News</a>
+                <a href="about.html">About</a>
                 <a href="#">Account</a>
                 <a href="#">Log Out</a>
             </nav>
