--- a/homepage.html
+++ b/homepage.html
@@ -15,13 +15,12 @@
             <a href="home.html" class="HopeBridge">HopeBridge</a>
         </div>
         <nav class="nav-menu">
-            <a href="#">Home</a>
-            <a href="#">Search</a>
-            <a href="#">Notification</a>
-            <a href="#">News</a>
-            <a href="#">About</a>
-            <a href="#">Account</a>
-            <a href="#">Log Out</a>
+            <a href="homepage.html">Home</a>
+                <a href="notification.html">Notification</a>
+                <a href="news.html">News</a>
+                <a href="about.html">About</a>
+                <a href="#">Account</a>
+                <a href="#">Log Out</a>
         </nav>
 
     </header>
