updated more details
edra

--- a/homepage.html
+++ b/homepage.html
@@ -48,7 +48,7 @@
                 <div class="news-info">
                     <h3>📍 Mangin, Dagupan City</h3>
                     <p>Another fire at a vacant home in Barangay Mangin has led to a demolition order. PANDA Volunteer Fire...</p>
-                    <a href="moredetails.html" class="more-details-btn">More Details</a>
+                    <a href="moredetails2.html" class="more-details-btn">More Details</a>
                 </div>
             </div>
         </main>
