added a search bar
edraline

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <a href="home.html" class="HopeBridge">HopeBridge</a>
         </div>
         <nav class="nav-menu">
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <span class="separator"></span>
             <button class="btnLogin" onclick="openModal('loginModal')">Login</button>
             <button class="btnSignUp" onclick="openModal('signupModal')">Sign Up</button>
