--- a/homepage.html
+++ b/homepage.html
@@ -22,16 +22,13 @@
                 <a href="#">Account</a>
                 <a href="#">Log Out</a>
         </nav>
-
-    </header>
-
-        <!-- Main Content -->
-        <main class="content">
-            <!-- Search Bar (Hidden by Default) -->
-            <div id="search-container" class="hidden">
-                <input type="text" id="searchBox" class="search-box" placeholder="Type to search..." onkeypress="return isAlphanumeric(event)">
-            </div>
-
+        <form action="search-results.html" method="GET" class="search-form">
+            <input type="text" name="query" placeholder="Search here..." class="search-input">
+            <button type="submit" class="search-btn">
+                <ion-icon name="search-outline"></ion-icon>
+            </button>
+        </form>
+</header>
             <!-- News Card 1 -->
             <div class="news-card">
                 <img src="poverty.jpeg" alt="Tornado Damage">
