--- a/moredetails.html
+++ b/moredetails.html
@@ -22,6 +22,12 @@
             <a href="#">Account</a>
             <a href="#">Log Out</a>
         </nav>
+        <form action="search-results.html" method="GET" class="search-form">
+            <input type="text" name="query" placeholder="Search here..." class="search-input">
+            <button type="submit" class="search-btn">
+                <ion-icon name="search-outline"></ion-icon>
+            </button>
+        </form>
     </header>
     <main>
         <section class="disaster-relief">
