--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
         <form action="search-results.html" method="GET" class="search-form">
             <input type="text" name="query" placeholder="Search here..." class="search-input">
             <button type="submit" class="search-btn">
-                <ion-icon name="search-outline"></ion-icon>
+                <ion-icon name="search-outline" class="search-box"></ion-icon>
             </button>
         </form>
 </header>
