--- a/moredetails2.html
+++ b/moredetails2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HopeBridge</title>
     <link rel="stylesheet" href="moredetails2.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <header>
@@ -23,7 +25,7 @@
         <form action="search-results.html" method="GET" class="search-form">
             <input type="text" name="query" placeholder="Search here..." class="search-input">
             <button type="submit" class="search-btn">
-                <ion-icon name="search-outline"></ion-icon>
+                <ion-icon name="search-outline" class="search-box"></ion-icon>
             </button>
         </form>
     </header>
