--- a/homepage.html
+++ b/homepage.html
@@ -15,12 +15,12 @@
             <a href="home.html" class="HopeBridge">HopeBridge</a>
         </div>
         <nav class="nav-menu">
-            <a href="homepage.html">Home</a>
-                <a href="notification.html">Notification</a>
-                <a href="news.html">News</a>
-                <a href="about.html">About</a>
-                <a href="#">Account</a>
-                <a href="#">Log Out</a>
+            <a href="homepage.html" class="home.s">Home</a>
+            <a href="notification.html" class="notif.s">Notification</a>
+            <a href="news.html" class="new.s">News</a>
+            <a class="about.s" href="about.html" >About</a>
+            <a href="#">Account</a>
+            <a href="#">Log Out</a>
         </nav>
         <form action="search-results.html" method="GET" class="search-form">
             <input type="text" name="query" placeholder="Search here..." class="search-input">
