--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="gosignup-container">
-        <p>Already have an account? <br> <a href="#" onclick="switchModal('signupModal', 'loginModal')" class="change-window">Sign in</a></p>
+        <p>Already have an account? <br> <a href="#" onclick="switchModal('signupModal', 'loginModal')" class="change-window">Login</a></p>
     </div>
 </div>
     
