logout feature working

--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
             <a href="news.html" class="new.s">News</a>
             <a class="about.s" href="about.html" >About</a>
             <a href="#">Account</a>
-            <a href="#">Log Out</a>
+            <a href="logout.php" class="logout.s">Log Out</a>
         </nav>
         <form action="search-results.html" method="GET" class="search-form">
             <input type="text" name="query" placeholder="Search here..." class="search-input">
