--- a/user-management.html
+++ b/user-management.html
@@ -35,7 +35,7 @@
 
     <main id="mainContent">
         <h2>User Management</h2>
-        <hr>
+        
 
         <section class="user-management">
             <hr>
@@ -75,18 +75,19 @@
             <button class="add-user">Add New User</button>
         </section>
 
-        <section class="settings">
-            <h3>Settings</h3>
-            <hr>
-            <ul>
-                <li>General Settings</li>
-                <li>Account Settings</li>
-                <li>Notification Settings</li>
-            </ul>
-        </section>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quaerat est, culpa temporibus libero eveniet quam veritatis voluptatem quos optio! Similique, nihil! Quam nihil consequuntur velit asperiores nostrum repellat rerum harum optio dolores enim, voluptatem, nemo aperiam quis, inventore nulla pariatur blanditiis. Explicabo maxime ex delectus veritatis officiis voluptatem id vel voluptatibus iure ipsam dignissimos aliquam eum labore praesentium molestias eaque odit quis, voluptatum distinctio dolor dolorum. Voluptas modi fuga natus dicta reprehenderit exercitationem, cupiditate quibusdam nulla culpa autem impedit quia beatae nam assumenda rerum fugiat incidunt praesentium, cum velit provident maxime recusandae. Mollitia, qui. Tempore exercitationem accusamus deleniti deserunt.</p>
 
         <section class="reports">
-            <h3>Reports</h3>
+            <a href="reports.html"><h3>Reports</h3></a>
             <hr>
             <ul>
                 <li>User Activity Report</li>
@@ -94,6 +95,17 @@
                 <li>Performance Metrics</li>
             </ul>
         </section>
+
+        <section class="abouts">
+            <a href="abouts.html"><h3>About Us</h3></a>
+            <hr>
+            <ul>
+                <li>General Settings</li>
+                <li>Account Settings</li>
+                <li>Notification Settings</li>
+            </ul>
+        </section>
+        
     </main>
 
     <script>
