updated ui home and about
edra

--- a/about.html
+++ b/about.html
@@ -22,23 +22,23 @@
     <body>
         <header>
             <div class="logo-container">
-                <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
+                <a href="home.html"><img src="hopebridge.jpg" alt="Company Logo" class="Logo"></a>
                 <a href="home.html" class="HopeBridge">HopeBridge</a>
             </div>
-            <nav class="nav-menu">
-                <a href="homepage.html">Home</a>
-                <a href="notification.html">Notification</a>
-                <a href="news.html">News</a>
-                <a href="about.html">About</a>
-                <a href="#">Account</a>
-                <a href="#">Log Out</a>
-            </nav>
+            <div class="search-container">
             <form action="search-results.html" method="GET" class="search-form">
                 <input type="text" name="query" placeholder="Search here..." class="search-input">
                 <button type="submit" class="search-btn">
                     <ion-icon name="search-outline"></ion-icon>
                 </button>
             </form>
+            </div>
+            <nav class="nav-menu">
+                <a href="news.html">News</a>
+                <a href="notification.html">Account</a>
+                <a href="account.html">About</a>
+                <a href="logout.php" class="logout.s">Log out</a>
+            </nav>
         </header>
     </body>
 </html>
