--- a/homepage.html
+++ b/homepage.html
@@ -10,24 +10,28 @@
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <a href="home.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
-            <a href="home.html" class="HopeBridge">HopeBridge</a>
-        </div>
-        <nav class="nav-menu">
-            <a href="homepage.html" class="home.s">Home</a>
-            <a href="notification.html" class="notif.s">Notification</a>
-            <a href="news.html" class="new.s">News</a>
-            <a class="about.s" href="about.html" >About</a>
-            <a href="#">Account</a>
-            <a href="logout.php" class="logout.s">Log Out</a>
-        </nav>
-        <form action="search-results.html" method="GET" class="search-form">
-            <input type="text" name="query" placeholder="Search here..." class="search-input">
-            <button type="submit" class="search-btn">
-                <ion-icon name="search-outline" class="search-box"></ion-icon>
-            </button>
-        </form>
+            <div class="logo-container">
+                <a href="home.html"><img src="hopebridge.jpg"Company Logo" class="Logo"></a>
+                <a href="home.html" class="HopeBridge">HopeBridge</a>
+            </div>
+           
+            <nav class="nav-menu">
+                <a href="homepage.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="news.html">News</a>
+                <a href="contact.html">Contact</a>
+                <a href="blog.html">Blog</a>
+                <a href="logout.php" class="logout.s">Log out</a>
+                <span class="separator"></span>
+                <a href="donate.html" class="btnDonate">Donate</a>
+            </nav>
+            <form action="search-results.html" method="GET" class="search-form">
+                <input type="text" name="query" placeholder="Search here..." class="search-input">
+                <button type="submit" class="search-btn">
+                    <ion-icon name="search-outline" class="search-box"></ion-icon>
+                </button>
+            </form>
+        </header>
 </header>
             <!-- News Card 1 -->
             <div class="news-card">
