admin changes part 2

--- a/reports.html
+++ b/reports.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <a href="adminpage.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
+            <a href="adminpage.html"><img src="hopebridge.jpg" alt="Company Logo" class="Logo"></a>
             <a href="adminpage.html" class="HopeBridge">HopeBridge</a>
         </div>
         <nav class="nav-menu">
@@ -24,11 +24,23 @@
                 <a href="reports.html" class="nav-link reports">Reports</a>
                 <a href="abouts.html" class="nav-link about">About</a>
                 <a href="settings.html" class="nav-link settings">Settings</a>
-                <a href="#" class="nav-link logout">Log Out</a>
+                <a href="logout.html" class="nav-link logout">Log Out</a>
             </nav>
 
     </header>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const currentLocation = window.location.pathname;
+            const navLinks = document.querySelectorAll('.nav-menu a');
 
+            navLinks.forEach(link => {
+                if (link.href.includes(currentLocation)) {
+                    link.classList.add('active');
+                }
+            });
+        });
+    </script>
+    
 </body>
 </html>
