--- a/adminpage.html
+++ b/adminpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="adminpage.css">
+    <link rel="stylesheet" href="adminpage.css"> <!-- Your external CSS file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -13,22 +13,35 @@
 <body>
     <header>
         <div class="logo-container">
-            <a href="adminpage.html"><img src="bird.jpeg" alt="Company Logo" class="Logo"></a>
+            <a href="adminpage.html"><img src="hopebridge.jpg" alt="Company Logo" class="Logo"></a>
             <a href="adminpage.html" class="HopeBridge">HopeBridge</a>
         </div>
         <nav class="nav-menu">
-            <nav class="nav-menu">
-                <a href="adminpage.html" class="nav-link home">Home</a>
-                <a href="user-management.html" class="nav-link user-management">User  Management</a>
-                <a href="newss.html" class="nav-link news">News</a>
-                <a href="reports.html" class="nav-link reports">Reports</a>
-                <a href="abouts.html" class="nav-link about">About</a>
-                <a href="settings.html" class="nav-link settings">Settings</a>
-                <a href="#" class="nav-link logout">Log Out</a>
-            </nav>
-
+            <a href="adminpage.html" class="nav-link home">Home</a>
+            <a href="user-management.html" class="nav-link user-management">User  Management</a>
+            <a href="newss.html" class="nav-link news">News</a>
+            <a href="reports.html" class="nav-link reports">Reports</a>
+            <a href="abouts.html" class="nav-link about">About</a>
+            <a href="settings.html" class="nav-link settings">Settings</a>
+            <a href="logout.html" class="nav-link logout">Log Out</a>
+        </nav>
     </header>
 
+    <div class="dashboard">
+        <h2>Admin Dashboard</h2>
+    </div>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const currentLocation = window.location.pathname;
+            const navLinks = document.querySelectorAll('.nav-menu a');
+
+            navLinks.forEach(link => {
+                if (link.href.includes(currentLocation)) {
+                    link.classList.add('active');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
