--- a/home.html
+++ b/home.html
@@ -25,6 +25,9 @@
         </header>
         <div class="cover-logo">
             <img src="volunteer.png" alt="volunteer" class="volunteer">
+            <div class="tagline">
+                <h1>Use as a bridge to help people in needs.</h1>
+            </div>
         </div>
         <main>
             <h1>Make a Donation</h1>
