--- a/adminpage.html
+++ b/adminpage.html
@@ -20,16 +20,17 @@
             <a href="adminpage.html" class="nav-link home">Home</a>
             <a href="user-management.html" class="nav-link user-management">User  Management</a>
             <a href="newss.html" class="nav-link news">News</a>
+            <a href="pending.html" class="nav-link pending">Pending</a>
             <a href="reports.html" class="nav-link reports">Reports</a>
-            <a href="abouts.html" class="nav-link about">About</a>
+            <a href="abouts.html" class="nav-link about">About Us</a>
             <a href="settings.html" class="nav-link settings">Settings</a>
             <a href="logout.html" class="nav-link logout">Log Out</a>
         </nav>
     </header>
 
-    <div class="dashboard">
-        <h2>Admin Dashboard</h2>
-    </div>
+    <!-- <div class="dashboard">
+        <h1>Admin Dashboard</h1>
+    </div> -->
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
