--- a/reports.html
+++ b/reports.html
@@ -21,6 +21,7 @@
                 <a href="adminpage.html" class="nav-link home">Home</a>
                 <a href="user-management.html" class="nav-link user-management">User  Management</a>
                 <a href="newss.html" class="nav-link news">News</a>
+                <a href="pending.html" class="nav-link pending">Pending</a>
                 <a href="reports.html" class="nav-link reports">Reports</a>
                 <a href="abouts.html" class="nav-link about">About</a>
                 <a href="settings.html" class="nav-link settings">Settings</a>
